# aurora-trade

./: .coverage  .editorconfig  .gitignore  Makefile  README.org  conanfile.txt  prepare-dev-env.sh  pyproject.toml
artrade/configs/: __init__.py  _app.py  _appdirs.py  _context.py  _security.py
artrade/models/: __init__.py
artrade/quote/: _longport.py
artrade/utils/: meta.py
cpp_code/: conanfile.txt  prepare-cpp-env.sh
docs/: bigpicture.plantuml  conf.py  index.rst
examples/: test.py
services/market_data/: CMakeLists.txt
tests/utils/: test_meta.py
